--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="content">
     <a href="/" class="logo">DOL-003</a>
     <ul class="menu">
-      <li><a href="#">Find a modder</a></li>
+      <li><a href="/modders">Find a modder</a></li>
       <% if current_modder.present? %>
         <li class="user-menu">
 
