--- a/app/views/modders/show.html.erb
+++ b/app/views/modders/show.html.erb
@@ -22,7 +22,7 @@
     <% end %>
   </section>
 
-  <section class="span-8 info">
+  <section class="span-8 modder-info">
     <div class="meta">
       <figure class="logo" style="<%= "background-image: url(#{@modder.logo_url})" if @modder.logo.present? %>">
         <% if @modder.logo.blank? %>
