--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -84,7 +84,7 @@
         react_component "ServiceSelector", {
           field_name: 'modder[services]',
           all_services: ModderService.enabled_services.map { |slug, service| { value: slug, label: service[:name], color: service[:color] } },
-          modder_services: @modder.modder_services.map { |modder_service|
+          selected_services: @modder.modder_services.map { |modder_service|
             service = ModderService::ALL_SERVICES[modder_service.service.to_sym]
             {
               value: modder_service.service,
