--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -34,7 +34,7 @@
         }
       %>
       <%= form.submit 'Search', class: 'button' %>
-      <%= form.hidden_field 'map', value: true %>
+      <%= form.hidden_field :map, value: 1 %>
     <% end %>
 
   </section>
