--- a/app/views/modders/index.html.erb
+++ b/app/views/modders/index.html.erb
@@ -92,7 +92,7 @@
               </figure>
             <% end %>
             <div>
-              <%= link_to modder do %><h3><%= modder.name %></h3><% end %>
+              <h3><%= link_to modder.name, modder %></h3>
               <p class="city"><%= inline_svg_tag 'pin' %><%= modder.city %></p>
             </div>
           </div>
