--- a/app/views/modders/index.html.erb
+++ b/app/views/modders/index.html.erb
@@ -60,6 +60,7 @@
             latitude: @latitude,
             longitude: @longitude,
             interactive: true,
+            map_pin_image_url: image_url('map-pin.png'),
             modders: @results.map { |modder|
               {
                 url: modder_url(modder),
