--- a/app/views/modders/index.html.erb
+++ b/app/views/modders/index.html.erb
@@ -61,6 +61,7 @@
             longitude: @longitude,
             interactive: true,
             map_pin_image_url: image_url('map-pin.png'),
+            map_visible: @map,
             modders: @results.map { |modder|
               {
                 url: modder_url(modder),
