--- a/app/frontend/entrypoints/modders.scss
+++ b/app/frontend/entrypoints/modders.scss
@@ -127,6 +127,7 @@ body.modders.index {
       height: 320px;
       margin-top: -24px;
       border-radius: 16px;
+      border: 2px solid #eee;
       overflow: hidden;
       opacity: 0;
       visibility: hidden;
