--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -45,7 +45,7 @@
 
     <div class="span-4 caption">
       <p class="label large">Logo</p>
-      <p class="small">Upload a logo to display by your name. Recommended minimum size: 128 x 128 pixels. Maximum 500KB.</p>
+      <p class="small">Upload a logo to display by your name. Recommended minimum size: 128 x 128 pixels. Maximum 1MB.</p>
     </div>
 
     <div class="span-8 input-container">
