--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,7 @@
 
   <section class="span-5">
 
-    <h2>Modder registration</h2>
+    <h2>Get listed</h2>
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form' }) do |f| %>
 
