--- a/app/frontend/entrypoints/base.scss
+++ b/app/frontend/entrypoints/base.scss
@@ -1,12 +1,13 @@
 @import "normalize.css/normalize";
 
-@import "../colors";
-@import "../typography";
-@import "../foundation";
-@import "../flash";
-@import "../form";
-@import "../text-input";
-@import "../file-input";
-@import "../textarea";
-@import "../button";
-@import "../service-pill";
+@import "@/colors";
+@import "@/typography";
+@import "@/foundation";
+@import "@/flash";
+@import "@/form";
+@import "@/text-input";
+@import "@/file-input";
+@import "@/textarea";
+@import "@/select-input";
+@import "@/button";
+@import "@/service-pill";
