--- a/app/frontend/form.scss
+++ b/app/frontend/form.scss
@@ -1,5 +1,6 @@
-.form {
+@import "@/colors";
 
+.form {
   .errors {
     color: $mario;
     list-style: none;
@@ -17,9 +18,7 @@
   }
 
   .field {
-
     &.error {
-
       .label {
         color: $mario;
       }
@@ -48,6 +47,7 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     margin-bottom: 4px;
+    color: $panasonic;
 
     &.large {
       font-size: 16px;
