--- a/app/views/application/_form_field.html.erb
+++ b/app/views/application/_form_field.html.erb
@@ -7,6 +7,6 @@
   <% end %>
   <%= locals[:form].send locals[:field_type], locals[:field_name], locals[:options] %>
   <% errors.each do |error| %>
-    <p class="error-message"><%= error.full_message %>.</p>
+    <p class="error-message"><%= locals[:error_field].present? ? error.send(locals[:error_field]) : error.full_message %>.</p>
   <% end %>
 </div>
