--- a/app/views/modders/show.html.erb
+++ b/app/views/modders/show.html.erb
@@ -14,7 +14,6 @@
       %>
     <% else %>
       <div class="photo-container">
-        <% #TODO: placeholders with no photos %>
         <% @modder.modder_photos.map do |modder_photo| %>
           <%= image_tag modder_photo.photo_url %>
         <% end %>
@@ -46,10 +45,20 @@
   </section>
 
   <section class="span-4 sidebar">
-    <%= link_to 'https://google.com', class: 'button' do %>Visit website<%= inline_svg_tag 'external' %><% end %>
-    <a href="#"><%= inline_svg_tag 'twitter' %> @VulpineCustoms</a>
-    <a href="#"><%= inline_svg_tag 'instagram' %> VulpineCustoms</a>
-    <a href="#"><%= inline_svg_tag 'email' %> hello@vulpinecustoms.com</a>
+    <%= link_to @modder.featured_link_url, target: '_blank', class: 'button' do %><%= @modder.featured_link_text %><%= inline_svg_tag 'external' %><% end %>
+
+    <% if @modder.website_url.present? && @modder.featured_link != 'website_url' %>
+      <%= link_to @modder.website_url, target: '_blank' do %><%= inline_svg_tag 'link' %><%= URI.parse(@modder.website_url).host %><% end %>
+    <% end %>
+
+    <% if @modder.etsy_shop.present? && @modder.featured_link != 'etsy_shop' %>
+      <%= link_to @modder.etsy_url, target: '_blank' do %><%= inline_svg_tag 'etsy' %><%= @modder.etsy_shop %><% end %>
+    <% end %>
+
+    <% if @modder.twitter_username.present? && @modder.featured_link != 'twitter_username' %>
+      <%= link_to @modder.twitter_url, target: '_blank' do %><%= inline_svg_tag 'twitter' %><%= @modder.formatted_twitter_username %><% end %>
+    <% end %>
+
     <p class="small">Joined <%= @modder.updated_at.strftime('%b %Y') %></p>
     <p class="small">Last updated <%= time_ago_in_words(@modder.updated_at) %> ago</p>
   </section>
