--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -24,7 +24,7 @@
         field_name: :name,
         field_type: :text_field,
         label: false,
-        options: { class: 'text-input large', placeholder: 'Something Something Customs' }
+        options: { class: 'text-input large', placeholder: 'Something Something Customs', autocomplete: 'off' }
       } %>
     </div>
 
@@ -39,7 +39,7 @@
         field_name: :bio,
         field_type: :text_area,
         label: false,
-        options: { maxlength: 500, class: 'textarea height-medium', placeholder: 'I started modding controllers in 1973 and ...' }
+        options: { maxlength: 500, class: 'textarea height-medium', placeholder: 'Optional' }
       } %>
     </div>
 
@@ -117,7 +117,7 @@
         field_type: :text_field,
         error_field: :message,
         label: 'Website',
-        options: { maxlength: 500, class: 'text-input xlarge', placeholder: 'https://your-website.com' }
+        options: { maxlength: 500, class: 'text-input xlarge', placeholder: 'https://your-website.com', autocomplete: 'off' }
       } %>
 
       <%= render 'form_field', locals: {
@@ -127,7 +127,7 @@
         field_type: :text_field,
         error_field: :message,
         label: 'Etsy shop',
-        options: { maxlength: 50, class: 'text-input large', placeholder: 'YourShopName (not the full URL)' }
+        options: { maxlength: 50, class: 'text-input large', placeholder: 'YourShopName (not the full URL)', autocomplete: 'off' }
       } %>
 
       <%= render 'form_field', locals: {
@@ -137,7 +137,7 @@
         field_type: :text_field,
         error_field: :message,
         label: 'Twitter handle',
-        options: { maxlength: 50, class: 'text-input large', placeholder: '@YourTwitterHandle' }
+        options: { maxlength: 50, class: 'text-input large', placeholder: '@YourTwitterHandle', autocomplete: 'off' }
       } %>
 
     </div>
