--- a/app/views/modders/index.html.erb
+++ b/app/views/modders/index.html.erb
@@ -53,7 +53,13 @@
 
   <% if @results_visible %>
     <section class="results span-8 <%= 'map-visible' if @map %>" id="modder-search-results">
-      <% if @results.any? %>
+
+      <% if @results.empty? %>
+
+        <h2>No results</h2>
+        <p>Refine your search criteria and try again.</p>
+
+      <% else %>
 
         <%=
           react_component 'ModderMap', {
@@ -82,6 +88,7 @@
         </div>
 
       <% end %>
+
       <% @results.each do |modder| %>
 
         <section class="modder-info">
