--- a/app/frontend/button.scss
+++ b/app/frontend/button.scss
@@ -31,6 +31,11 @@
     box-shadow: inset 0 2px 10px -6px $black;
   }
 
+  &:disabled {
+    background-color: $platinum;
+    cursor: not-allowed;
+  }
+
   &.secondary {
     color: $indigo;
     background-color: transparent;
@@ -48,7 +53,6 @@
   }
 
   .dark & {
-
     &.secondary {
       color: $spice;
       background-color: transparent;
