--- a/app/frontend/entrypoints/registrations.scss
+++ b/app/frontend/entrypoints/registrations.scss
@@ -13,5 +13,6 @@ body.registrations {
     margin: -24px -28px 32px;
     background-color: lighten($spice, 30%);
     border-radius: 24px;
+    box-shadow: inset 0 0 0 2px $spice;
   }
 }
