--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -3,11 +3,56 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <style>
-      /* Email styles need to be inline */
+
+      body {
+        background-color: #fafafa;
+        font-family: monospace;
+      }
+
+      p {
+        margin: 0;
+        line-height: 1.5;
+      }
+
+      p + p {
+        margin-top: 1em;
+      }
+
+      .container {
+        max-width: 600px;
+        margin: 0 auto;
+        text-align: center;
+      }
+
+      .logo {
+        display: inline-block;
+        font-size: 20px;
+        line-height: 1;
+        font-weight: bold;
+        padding: 3px 10px;
+        border-radius: 100px;
+        box-shadow: inset 0 0 0 3px #fdb03a;
+        color: #fdb03a;
+        margin: 48px auto;
+      }
+
+      .content {
+        background-color: #fff;
+        border: 2px solid #b8bfbf;
+        border-radius: 24px;
+        padding: 24px 28px 28px;
+        text-align: left;
+      }
+
     </style>
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <figure class="logo">DOL-003</figure>
+      <div class="content">
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
