--- a/app/views/modders/show.html.erb
+++ b/app/views/modders/show.html.erb
@@ -7,7 +7,9 @@
           photos: @modder.modder_photos.map { |modder_photo|
             {
               uuid: modder_photo.uuid,
-              url: modder_photo.photo_url
+              url: modder_photo.photo_url,
+              width: modder_photo.width,
+              height: modder_photo.height
             }
           }
         }
@@ -15,7 +17,7 @@
     <% else %>
       <div class="photo-container">
         <% @modder.modder_photos.map do |modder_photo| %>
-          <%= image_tag modder_photo.photo_url %>
+          <%= image_tag modder_photo.photo_url, width: modder_photo.thumb_display_width, height: modder_photo.thumb_display_height %>
         <% end %>
       </div>
     <% end %>
