--- a/app/frontend/flash.scss
+++ b/app/frontend/flash.scss
@@ -4,15 +4,31 @@
     transform: translateY(-32px) scale(0.95);
   }
 
-  to {
+  4% {
     opacity: 1;
     transform: none;
+  }
+
+  97% {
+    opacity: 1;
+    transform: none;
+  }
+
+  99% {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+
+  to {
+    opacity: 0;
+    transform: scale(0.95);
+    visibility: hidden;
   }
 }
 
 .flash {
   position: absolute;
-  top: 100px;
+  top: 40px;
   left: 0;
   right: 0;
   margin: 0 auto;
@@ -34,7 +50,7 @@
     border-radius: 16px;
     box-shadow: 0 12px 12px -16px $black;
     opacity: 0;
-    animation: fadein 0.4s ease-out 0.4s forwards;
+    animation: fadein 10s ease-out 0.4s forwards;
 
     &.notice {
       background-color: hsl(hue($emerald), saturation($emerald), 80%);
