another photo dimension fix

--- a/app/views/modders/show.html.erb
+++ b/app/views/modders/show.html.erb
@@ -8,8 +8,8 @@
             {
               uuid: modder_photo.uuid,
               url: modder_photo.photo_url,
-              width: modder_photo.width,
-              height: modder_photo.height
+              width: modder_photo.thumb_display_width,
+              height: modder_photo.thumb_display_height
             }
           }
         }
