--- a/app/views/modders/index.html.erb
+++ b/app/views/modders/index.html.erb
@@ -102,7 +102,7 @@
             <% end %>
             <div>
               <h3><%= link_to modder.name, modder %></h3>
-              <p class="city"><%= inline_svg_tag 'pin' %><%= modder.city %></p>
+              <p class="city"><%= inline_svg_tag 'pin.svg' %><%= modder.city %></p>
             </div>
           </div>
           <div class="services">
