--- a/app/views/application/about.html.erb
+++ b/app/views/application/about.html.erb
@@ -1,1 +1,15 @@
-hello this is all about
+<div class="content grid">
+  <div class="span-8">
+
+    <h1>About DOL-003.info</h1>
+
+    <p class="big">DOL-003 is the product number stamped on the original Nintendo GameCube controller (GCC). DOL-003.info is a website all about GCCs and the vibrant maker community that still exists around them more than 20 years after their original debut.</p>
+
+    <p><a href="https://discord.gg/HwtPU7tkCT" target="_blank">Join us on Discord</a> for questions or suggestions about the site.</p>
+
+    <p>This website is completely open-source. Bug reports and contributions are welcome! Find the <a href="https://github.com/jmarquis/controllers" target="_blank">source code on GitHub</a>.</p>
+
+    <p>DOL-003.info is a pro bono project by <a href="https://twitter.com/_jmarquis" target="_blank">Jeremy Marquis</a>, aka Math (math#9000).</p>
+
+  </div>
+</div>
