--- a/app/frontend/entrypoints/registrations.scss
+++ b/app/frontend/entrypoints/registrations.scss
@@ -15,4 +15,9 @@ body.registrations {
     border-radius: 24px;
     box-shadow: inset 0 0 0 2px $spice;
   }
+
+  .agreement {
+    width: 360px;
+    margin-top: 32px;
+  }
 }
