--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -3,7 +3,8 @@
 
     <div class="span-6">
       <p class="small">DOL-003 is the product number of the original Nintendo GameCube controller, and DOL-003.info exists as an unofficial repository of GCC information and community modders. <%= link_to 'Learn more', about_path %></p>
-      <p class="small">© <%= Date.today.year %>. All rights reserved. <%= link_to 'Terms of service', terms_path %>.</p>
+      <p class="small">© <%= Date.today.year %>. All rights reserved.</p>
+      <p class="small"><%= link_to 'Terms of Service', terms_path %> • <%= link_to 'Privacy Policy', privacy_path %> • <%= link_to 'House Rules', rules_path %></p>
     </div>
 
     <div class="span-6 sign-in-link">
