email styling and favicon

--- a/app/frontend/colors.scss
+++ b/app/frontend/colors.scss
@@ -1,6 +1,6 @@
 $white: #fff;
-$offwhite: #fafafa;
-$black: #222;
+$offwhite: #faf9f7;
+$black: #211f21;
 $platinum: #b8bfbf;
 $panasonic: #6d6b6b;
 $indigo: #444f9a;
