--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -4,9 +4,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <style>
 
+      @import "https://use.typekit.net/uju8khj.css";
+
       body {
         background-color: #fafafa;
-        font-family: monospace;
+        font-family: source-code-pro, monospace;
+        font-size: 16px;
+        font-weight: 400;
+        font-style: normal;
+        color: #222;
       }
 
       p {
@@ -49,7 +55,7 @@
 
   <body>
     <div class="container">
-      <figure class="logo">DOL-003</figure>
+      <img class="logo" src="https://dol-003.info/images/logo.png" width="104" height="25">
       <div class="content">
         <%= yield %>
       </div>
