--- a/app/frontend/foundation.scss
+++ b/app/frontend/foundation.scss
@@ -19,7 +19,7 @@ html {
 body {
   box-sizing: border-box;
   min-height: 100vh;
-  background-color: $offwhite;
+  background-color: $pearl;
 }
 
 img {
