--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -6,13 +6,23 @@
 
       @import "https://use.typekit.net/uju8khj.css";
 
+      *,
+      ::before,
+      ::after,
+      ::placeholder {
+        box-sizing: inherit;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+
       body {
+        box-sizing: border-box;
         background-color: #fafafa;
         font-family: source-code-pro, monospace;
         font-size: 16px;
         font-weight: 400;
         font-style: normal;
-        color: #222;
+        color: #211F21;
       }
 
       p {
@@ -24,6 +34,16 @@
         margin-top: 1em;
       }
 
+      a {
+        text-decoration: none;
+        font-weight: bold;
+        color: #343d77;
+      }
+
+      a:hover {
+        color: #6c77be;
+      }
+
       .container {
         max-width: 600px;
         margin: 0 auto;
@@ -32,13 +52,7 @@
 
       .logo {
         display: inline-block;
-        font-size: 20px;
-        line-height: 1;
-        font-weight: bold;
-        padding: 3px 10px;
-        border-radius: 100px;
-        box-shadow: inset 0 0 0 3px #fdb03a;
-        color: #fdb03a;
+        vertical-align: bottom;
         margin: 48px auto;
       }
 
@@ -50,12 +64,47 @@
         text-align: left;
       }
 
+      .button {
+        display: inline-flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        border: 0;
+        box-shadow: 0;
+        height: 48px;
+        font-size: 14px;
+        font-weight: bold;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        padding: 0 24px;
+        margin: 0;
+        background-color: #444f9a;
+        border-radius: 48px;
+        color: #fff;
+        cursor: pointer;
+        white-space: nowrap;
+        text-decoration: none;
+      }
+
+      .button:hover {
+        background-color: #5b66b6;
+        box-shadow: 0 8px 8px -12px #5b66b6;
+        color: #fff;
+      }
+
+      .button:active {
+        background-color: #343d77;
+        box-shadow: inset 0 2px 10px -6px #343d77;
+        color: #fff;
+      }
+
     </style>
   </head>
 
   <body>
     <div class="container">
-      <img class="logo" src="https://dol-003.info/images/logo.png" width="104" height="25">
+      <%= link_to root_url do %>
+        <img class="logo" src="https://dol-003.info/images/logo.png" width="104" height="25">
+      <% end %>
       <div class="content">
         <%= yield %>
       </div>
