--- a/app/frontend/components/PhotoManager.scss
+++ b/app/frontend/components/PhotoManager.scss
@@ -11,7 +11,7 @@
 
   > .overlay {
     position: fixed;
-    background-color: rgba($offwhite, 90%);
+    background-color: rgba($pearl, 90%);
     top: 0;
     right: 0;
     bottom: 0;
