--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -39,19 +39,22 @@
 
   </section>
 
-  <% #TODO: if total > 3 %>
-  <section class="span-12">
-    <h2>Featured modders</h2>
-    <% Modder.vetted.random(3).has_photos.each do |modder| %>
-      <div>
-        <%= link_to modder do %>
-          <figure class="featured-photo" style="background-image: url(<%= modder.modder_photos.first.photo.thumb.url %>)"></figure>
+  <% if @featured_modders.count.count >= 3 %>
+    <section class="span-12">
+      <h2>Featured modders</h2>
+      <div class="featured-modders">
+        <% @featured_modders.each do |modder| %>
+          <div>
+            <%= link_to modder do %>
+              <figure class="featured-photo" style="background-image: url(<%= modder.modder_photos.first.photo.thumb.url %>)"></figure>
+            <% end %>
+            <h3><%= link_to modder.name, modder %></h3>
+            <p><%= modder.bio %></p>
+          </div>
         <% end %>
-        <h3><%= link_to modder.name, modder %></h3>
-        <p><%= modder.bio %></p>
       </div>
-    <% end %>
-  </section>
+    </section>
+  <% end %>
 
   <%= render 'get_listed' %>
 
