fix exception handling

--- a/app/views/exceptions/500.html.erb
+++ b/app/views/exceptions/500.html.erb
@@ -1,10 +1,4 @@
-<div class="content grid">
-  <div class="span-8">
-
-    <h1>Uh oh</h1>
-    <p class="big">That’s a stock.</p>
-    <p>Looks like you’ve found something broken. Feel free to let us know in <%= link_to 'our Discord server', 'https://discord.gg/HwtPU7tkCT', target: '_blank' %> or <%= link_to 'open an issue on GitHub', 'https://github.com/jmarquis/controllers/issues/new', target: '_blank' %>.</p>
-    <p><%= link_to 'Back to homepage', root_path %></p>
-
-  </div>
-</div>
+<h1>Uh oh</h1>
+<p class="big">That’s a stock.</p>
+<p>Looks like you’ve discovered something broken. Feel free to let us know in <%= link_to 'our Discord server', 'https://discord.gg/HwtPU7tkCT', target: '_blank' %> or <%= link_to 'open an issue on GitHub', 'https://github.com/jmarquis/controllers/issues/new', target: '_blank' %>.</p>
+<p><%= link_to 'Back to homepage', root_path %></p>
